gccida/c0/expand_end_loop
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3128:4: error: expected ';' after expression
rtx insn; // [rsp+60h] [rbp-30h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3128:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+60h] [rbp-30h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3133:4: error: expected ';' after expression
rtx etc_note; // [rsp+80h] [rbp-10h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3133:5: error: use of undeclared identifier 'etc_note'
rtx etc_note; // [rsp+80h] [rbp-10h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3134:4: error: expected ';' after expression
rtx start_label; // [rsp+88h] [rbp-8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3134:5: error: use of undeclared identifier 'start_label'
rtx start_label; // [rsp+88h] [rbp-8h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3136:1: error: use of undeclared identifier 'start_label'
start_label = cfun->stmt->x_loop_stack->data.cond.endif_label; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3137:6: error: use of undeclared identifier 'start_label'
if ( start_label == cfun->stmt->x_loop_stack->data.loop.continue_label ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3138:24: error: use of undeclared identifier 'start_label'
emit_note_before( -94, start_label); 
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3142:7: error: use of undeclared identifier 'etc_note'; did you mean 'itk_none'?
for ( etc_note = start_label; etc_note; etc_note = etc_note[1].fld[0].rtx ) 
      ^~~~~~~~
      itk_none
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/tree.h:2033:3: note: 'itk_none' declared here
  itk_none
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3142:18: error: use of undeclared identifier 'start_label'
for ( etc_note = start_label; etc_note; etc_note = etc_note[1].fld[0].rtx ) 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3142:31: error: use of undeclared identifier 'etc_note'
for ( etc_note = start_label; etc_note; etc_note = etc_note[1].fld[0].rtx ) 
                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3142:41: error: use of undeclared identifier 'etc_note'; did you mean 'itk_none'?
for ( etc_note = start_label; etc_note; etc_note = etc_note[1].fld[0].rtx ) 
                                        ^~~~~~~~
                                        itk_none
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/tree.h:2033:3: note: 'itk_none' declared here
  itk_none
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3142:52: error: use of undeclared identifier 'etc_note'
for ( etc_note = start_label; etc_note; etc_note = etc_note[1].fld[0].rtx ) 
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3144:37: error: use of undeclared identifier 'etc_note'
if ( ( unsigned __int16)*( _DWORD *)etc_note == 37 ) 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3146:10: error: use of undeclared identifier 'etc_note'
switch ( etc_note[2].fld[0].rtint ) 
         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3151:1: error: use of undeclared identifier 'etc_note'
etc_note = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3170:6: error: use of undeclared identifier 'etc_note'
if ( etc_note && optimize && !eh_regions && ( !debug_blocks || optimize >= 2) ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/stmt.c:3172:6: error: use of undeclared identifier 'etc_note'
if ( etc_note[1].fld[0].rtwint ) 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_end_loop/src/obj/stmt.o] Error 1
